# thermometer

./: .gitignore  CMakeLists.txt  README.txt
RTT/: SEGGER_RTT_Conf.h
cmake/: cortex-m0.cmake
src/: I2c.c  I2c.h  font.c  font.h  localTime.c  localTime.h  main.c  ssd1306.c  ssd1306.h
